# AlertaVida

./: .env.example  .gitignore  .mailmap  AGENT.md  CLAUDE.md  CONTEXT.md  NOTICE  README.md  SECURITY.md  data.json  database.py  monitor.py  pyproject.toml  scheduler.py
.github/workflows/: test.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_4665b543235ea625___init___py.html  z_4665b543235ea625_orquestrador_py.html  z_9229ef3710cc8a4c_database_py.html  z_9229ef3710cc8a4c_events_py.html  z_9229ef3710cc8a4c_monitor_py.html  z_9229ef3710cc8a4c_reporting_py.html  z_9229ef3710cc8a4c_scheduler_py.html  z_c7bbbb509e9e3413___init___py.html  z_c7bbbb509e9e3413_alerta_py.html  z_c7bbbb509e9e3413_cobrade_py.html  z_c7bbbb509e9e3413_coordenadas_py.html  z_c7bbbb509e9e3413_detector_py.html  z_c7bbbb509e9e3413_enums_py.html  z_c7bbbb509e9e3413_geographic_py.html  z_c7bbbb509e9e3413_municipio_py.html  z_c7bbbb509e9e3413_tempo_py.html  z_e125e1e2959f1576___init___py.html  z_e125e1e2959f1576__http_py.html  z_e125e1e2959f1576_base_py.html  z_e125e1e2959f1576_cemaden_py.html  z_e125e1e2959f1576_nasa_eonet_py.html
scripts/: diagnostico_banco.py  export_context.py  inspectLoop_cemaden_payload.py  inspect_cemaden_payload.py  inspect_eonet_payload.py  reclassificar_cobrade_cemaden.py  reclassificar_escopos.py
src/alertavida/: database.py  events.py  monitor.py  reporting.py  scheduler.py
src/alertavida/domain/: __init__.py  alerta.py  cobrade.py  coordenadas.py  detector.py  enums.py  geographic.py  municipio.py  tempo.py
src/alertavida/ingestion/: __init__.py  orquestrador.py
src/alertavida/sources/: __init__.py  _http.py  base.py  cemaden.py  nasa_eonet.py
tests/: conftest.py  test_contrato_cemaden.py  test_database.py  test_events.py  test_monitor.py  test_reporting.py  test_scheduler.py
tests/domain/: test_alerta.py  test_cobrade.py  test_coordenadas.py  test_detector.py  test_enums.py  test_geographic.py  test_municipio.py
tests/fixtures/: __init__.py  schemas_legados.py  sources_fake.py
tests/fixtures/eonet/: README.md  __init__.py
tests/ingestion/: __init__.py  test_orquestrador.py
tests/sources/: __init__.py  contrato.py  test_base.py  test_cemaden.py  test_http.py  test_nasa_eonet.py
wiki/: README.md  _glossary.md  _index.md  _integration-state.md  _schema.md  changelog.md
wiki/components/: database.md  domain-cobrade.md  domain-detector.md  domain-geographic.md  domain-models.md  events.md  ingestion-orquestrador.md  monitor.md  reporting.md  scheduler.md  sources-base.md  sources-cemaden.md  sources-http.md  sources-nasa-eonet.md
wiki/decisions/: alert-reactivation-instead-of-crash.md  alert-resolution-by-inference.md  datasource-adapter-falha-de-coleta.md  decision-record.md  fonte-as-strict-attribute.md  geographic-scope-bbox.md  orchestrator-silent-reports.md  outbox-pattern-eventbus.md  scheduler-background-jobs.md  schema-incompatibility-pre-a1.md  sdd-practices-from-spec-kit.md  shared-report-formatter.md  sqlite-wal-busy-timeout.md  surrogate-key-cod-alerta-text.md  template-method-http-datasource.md  tipoevento-cobrade-classification.md  utc-timestamps-consistency.md
wiki/patterns/: ai-agent-workflow.md  code-conventions.md  git-workflow.md  layer-convergence.md  resilience-invariants.md  security.md  spec-checklist.md  test-conventions.md
wiki/projects/: layer-1-ingestion.md  layer-2-domain.md  layer-3-events.md  layer-4-multi-source-ingestion.md  layer-5-correlation.md  layer-6-api.md  layer-7-visual-interface.md  layer-8-notification.md
wiki/raw/: analise-eonet-2026-05-18.md
