[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alertavida"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.0,<4.0",
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/alertavida/events.py" = ["E501"]
"src/alertavida/ingestion/orquestrador.py" = ["E501", "F821"]
"tests/sources/test_cemaden.py" = ["E501"]
"tests/test_database.py" = ["E501"]
"tests/test_events.py" = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: testes que dependem de rede ou recursos externos",
]
addopts = ["-m", "not integration", "-v"]
