[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alertavida"
version = "0.2.0"
description = "Real-time multi-source ingestion of natural-disaster alerts for the Brazilian public"
authors = [{ name = "Caio Olivieri", email = "oliviericaio12@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
keywords = ["disaster", "alerts", "cemaden", "monitoring", "civil-defense"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3,<4.0",
    "pydantic>=2.13.4,<3.0",
]

[project.urls]
Repository = "https://github.com/CaioOlivieri/AlertaVida"
Issues = "https://github.com/CaioOlivieri/AlertaVida/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/alertavida/events.py" = ["E501"]
"src/alertavida/ingestion/orquestrador.py" = ["E501"]
"tests/sources/test_cemaden.py" = ["E501"]
"tests/test_database.py" = ["E501"]
"tests/test_events.py" = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: testes que dependem de rede ou recursos externos",
]
addopts = ["-m", "not integration", "-v"]
# issue #40 — trava regressão de conexões sqlite3 não fechadas (ver
# wiki/components/database.md e a invariante de rollback transacional
# em wiki/patterns/resilience-invariants.md #4).
filterwarnings = ["error::ResourceWarning"]

[tool.coverage.run]
# relative_files: paths relativos no .coverage para a coverage-comment-action
# casar os arquivos do repo (requisito da action). source: mede só o pacote.
relative_files = true
source = ["src"]

[tool.coverage.report]
# Exclui da medição os guardas de entrypoint CLI (não testáveis por unit test):
# os blocos `if __name__ == "__main__"` em monitor.py e scheduler.py.
exclude_also = [
    "if __name__ == .__main__.:",
]
